Correcting more initialization errors

--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
     "d3": "^7.8.2",
     "date-fns": "^2.29.3",
     "esri-loader": "^3.7.0",
+    "gsx": "^1.1.2",
     "helper-toolkit-ts": "^1.1.14",
+    "jsx": "^0.9.89",
+    "jsx-runtime": "^1.2.0",
     "npm-check-updates": "^16.7.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
