--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
+    "calcite-web": "github:Esri/calcite-web",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
@@ -54,6 +55,7 @@
     "webpack-dev-server": "^4.12.0"
   },
   "dependencies": {
+    "@esri/calcite-components": "^1.1.0",
     "@types/arcgis-js-api": "^4.26.0",
     "@types/d3": "^7.4.0",
     "@types/shortid": "0.0.29",
@@ -61,7 +63,6 @@
     "@webpack-cli/generators": "^3.0.1",
     "axios": "^1.3.4",
     "calcite-react": "^0.62.1",
-    "calcite-web": "github:Esri/calcite-web#v1.2.5",
     "d3": "^7.8.2",
     "date-fns": "^2.29.3",
     "esri-loader": "^3.7.0",
